--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "npm run watch:css && craco start",
+    "build": "npm run watch:css && craco build",
     "test": "craco test",
     "eject": "craco eject"
   },
@@ -42,6 +42,9 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.0.0",
-    "react-app-alias": "^2.2.2"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "react-app-alias": "^2.2.2",
+    "tailwindcss": "^3.2.4"
   }
 }
