--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@craco/craco": "^7.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "react-app-alias": "^2.2.2",
     "tailwindcss": "^3.2.4"
   }
