--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "baseUrl": "./",
     "paths": {
       "@components": ["./src/components"],
-      "@modules": ["./src/modules"]
+      "@modules": ["./src/modules"],
+      "@store": ["./src/store"]
     }
   },
   "include": ["src"],
