--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
     "baseUrl": "./",
     "paths": {
       "@components": ["./src/components"],
+      "@models": ["./src/models"],
       "@modules": ["./src/modules"],
+      "@services": ["./src/services"],
       "@store": ["./src/store"]
     }
   },
