--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@types/react-redux": "^7.1.24",
+    "buffer": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-select": "^5.6.1",
+    "ts-case-convert": "^2.0.2",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
