--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "^18.0.9",
     "@types/react-redux": "^7.1.24",
     "buffer": "^6.0.3",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
