Fixes grid styels and adds modal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "baseUrl": "./",
     "paths": {
       "@components": ["./src/components"],
+      "@hooks": ["./src/hooks"],
       "@models": ["./src/models"],
       "@modules": ["./src/modules"],
       "@services": ["./src/services"],
