--- a/package.json
+++ b/package.json
@@ -57,5 +57,16 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "react-app-alias": "^2.2.2",
     "tailwindcss": "^3.2.4"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^@/(.+)": "<rootDir>/src/$1",
+      "^@components$": "<rootDir>/src/components/",
+      "^@hooks$": "<rootDir>/src/hooks/",
+      "^@models$": "<rootDir>/src/models/",
+      "^@modules$": "<rootDir>/src/modules/",
+      "^@services$": "<rootDir>/src/services/",
+      "^@store$": "<rootDir>/src/store/"
+    }
   }
 }
